--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation project(':rxjavalib')
+    implementation project(':routerlib')
 }
