--- a/base/build.gradle
+++ b/base/build.gradle
@@ -32,9 +32,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    // RxJava RxAndroid
+    // RxJava RxAndroid RxBinding
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.16'
-
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-design:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.1.1'
+
+    // RxLifecycle
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
 }
