--- a/base/build.gradle
+++ b/base/build.gradle
@@ -40,7 +40,12 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.1.1'
-
     // RxLifecycle
     implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    // Gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
