--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,29 @@
 
 buildscript {
     ext.kotlin_version = '1.1.51'
+    ext.supportlib_version = '27.1.1'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+
+    subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency {
+                details ->
+                    if (details.requested.group == 'com.android.support'
+                            && !details.requested.name.contains('multidex')) {
+                        details.useVersion "$supportlib_version"
+                    }
+            }
+        }
     }
 }
 
