--- a/rxjavalib/build.gradle
+++ b/rxjavalib/build.gradle
@@ -27,7 +27,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:appcompat-v7:$supportlib_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -35,7 +35,7 @@ dependencies {
 
     // RxJava RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.16'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
 
     implementation 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.1.1'
 }
