--- a/base/build.gradle
+++ b/base/build.gradle
@@ -44,10 +44,13 @@ dependencies {
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
     // RxLifecycle
     implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     // Gson
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    // Plain MVP
+    implementation 'com.hannesdorfmann.mosby3:mvp:3.1.0'
 }
