--- a/base/build.gradle
+++ b/base/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     // Plain MVP
     implementation 'com.hannesdorfmann.mosby3:mvp:3.1.0'
+    // PageState
+    implementation 'com.kingja.loadsir:loadsir:1.3.6'
 }
