--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
+    // Plain MVP
+    implementation 'com.hannesdorfmann.mosby3:mvp:3.1.0'
+    // RxLifecycle
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
+    // PageState
+    implementation 'com.kingja.loadsir:loadsir:1.3.6'
+
     implementation project(':rxjavalib')
     implementation project(':routerlib')
     implementation project(':base')
