使用 leftrecycle 取消订阅

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             android:theme="@style/SystemBarTheme"/>
         <activity android:name=".DemoActivity">
         </activity>
+        <activity android:name=".UserActivity">
+        </activity>
     </application>
 
 </manifest>
