--- a/base/build.gradle
+++ b/base/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation "com.android.support:appcompat-v7:$supportlib_version"
+    implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
