--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "config.gradle"
 
 buildscript {
     ext.kotlin_version = '1.1.51'
     ext.supportlib_version = '27.1.1'
     repositories {
         google()
+        jcenter()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
+    }
+    repositories {
         jcenter()
     }
     dependencies {
@@ -31,6 +37,10 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
+        maven { url 'https://maven.google.com' }
+    }
+    repositories {
         jcenter()
     }
 }
