--- a/base/build.gradle
+++ b/base/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     implementation 'com.hannesdorfmann.mosby3:mvp:3.1.0'
     // PageState
     implementation 'com.kingja.loadsir:loadsir:1.3.6'
+    // glide
+    api rootProject.ext.dependencies["glide"]
+    annotationProcessor rootProject.ext.dependencies["glide-compiler"]
 }
