--- a/base/build.gradle
+++ b/base/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     // glide
     api rootProject.ext.dependencies["glide"]
     annotationProcessor rootProject.ext.dependencies["glide-compiler"]
+    // logger
+    api rootProject.ext.dependencies["logger"]
 }
