--- a/config.gradle
+++ b/config.gradle
@@ -25,6 +25,7 @@ ext {
             "mvp"                   : 'com.hannesdorfmann.mosby3:mvp:3.1.0',
             "loadsir"               : 'com.kingja.loadsir:loadsir:1.3.6',
             "glide"                 : 'com.github.bumptech.glide:glide:4.8.0',
-            "glide-compiler"        : 'com.github.bumptech.glide:compiler:4.8.0'
+            "glide-compiler"        : 'com.github.bumptech.glide:compiler:4.8.0',
+            "logger"                : 'com.orhanobut:logger:2.2.0',
     ]
 }
