--- a/base/build.gradle
+++ b/base/build.gradle
@@ -12,7 +12,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     buildTypes {
@@ -61,4 +65,7 @@ dependencies {
     annotationProcessor rootProject.ext.dependencies["glide-compiler"]
     // logger
     api rootProject.ext.dependencies["logger"]
+    // ARouter
+    api 'com.alibaba:arouter-api:1.4.0'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.2.1'
 }
