--- a/config.gradle
+++ b/config.gradle
@@ -10,7 +10,7 @@ ext {
     dependencies = [
             "support-v4"            : 'com.android.support:support-v4:26.1.0',
             "appcompat-v7"          : 'com.android.support:appcompat-v7:27.1.1',
-            "design"                : '',
+            "design"                : 'com.android.support:design:27.1.1',
             "junit"                 : 'junit:junit:4.12',
             "runner"                : 'com.android.support.test:runner:1.0.2',
             "espresso-core"         : 'com.android.support.test.espresso:espresso-core:3.0.2',
